--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -222,20 +222,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RVs-y3-yPc">
-                                <rect key="frame" x="8" y="5" width="398" height="220"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJA-OC-Aqk">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="295"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qf1-if-yTv">
+                                        <rect key="frame" x="15" y="10" width="389" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="8bJ-cY-HVe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" name="AccentColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RVs-y3-yPc">
+                                        <rect key="frame" x="10" y="65" width="394" height="220"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="220" id="omt-3b-9y6"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hb-k1-TJx">
+                                        <rect key="frame" x="15" y="30" width="384" height="30"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="220" id="omt-3b-9y6"/>
+                                    <constraint firstAttribute="trailing" secondItem="qf1-if-yTv" secondAttribute="trailing" constant="10" id="1j2-dU-xQI"/>
+                                    <constraint firstItem="RVs-y3-yPc" firstAttribute="top" secondItem="6hb-k1-TJx" secondAttribute="bottom" constant="5" id="3Sn-hB-fDe"/>
+                                    <constraint firstAttribute="bottom" secondItem="RVs-y3-yPc" secondAttribute="bottom" constant="10" id="8ep-cp-4EE"/>
+                                    <constraint firstAttribute="trailing" secondItem="6hb-k1-TJx" secondAttribute="trailing" constant="15" id="AvT-0E-Q7M"/>
+                                    <constraint firstAttribute="trailing" secondItem="RVs-y3-yPc" secondAttribute="trailing" constant="10" id="CPM-3R-dDs"/>
+                                    <constraint firstItem="6hb-k1-TJx" firstAttribute="leading" secondItem="iJA-OC-Aqk" secondAttribute="leading" constant="15" id="Jtg-q9-QkB"/>
+                                    <constraint firstItem="6hb-k1-TJx" firstAttribute="top" secondItem="qf1-if-yTv" secondAttribute="bottom" constant="5" id="Lhq-fz-ptL"/>
+                                    <constraint firstItem="qf1-if-yTv" firstAttribute="top" secondItem="iJA-OC-Aqk" secondAttribute="top" constant="10" id="ODx-d2-zjU"/>
+                                    <constraint firstItem="qf1-if-yTv" firstAttribute="leading" secondItem="iJA-OC-Aqk" secondAttribute="leading" constant="15" id="idQ-fl-WQG"/>
+                                    <constraint firstItem="RVs-y3-yPc" firstAttribute="leading" secondItem="iJA-OC-Aqk" secondAttribute="leading" constant="10" id="vdM-st-JsQ"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hb-k1-TJx">
-                                <rect key="frame" x="10" y="233" width="394" height="30"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Detail" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PA9-cb-jtg">
-                                <rect key="frame" x="15" y="278" width="384" height="530"/>
+                                <rect key="frame" x="15" y="295" width="384" height="513"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -246,19 +273,18 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="bir-6P-cot" firstAttribute="trailing" secondItem="PA9-cb-jtg" secondAttribute="trailing" constant="15" id="0hH-SK-Y1K"/>
-                            <constraint firstItem="6hb-k1-TJx" firstAttribute="top" secondItem="RVs-y3-yPc" secondAttribute="bottom" constant="8" symbolic="YES" id="MSC-ve-qfi"/>
-                            <constraint firstItem="RVs-y3-yPc" firstAttribute="trailing" secondItem="bir-6P-cot" secondAttribute="trailing" constant="-8" id="R6s-F4-33Q"/>
+                            <constraint firstItem="iJA-OC-Aqk" firstAttribute="top" secondItem="bir-6P-cot" secondAttribute="top" id="8W0-fL-i5X"/>
                             <constraint firstItem="PA9-cb-jtg" firstAttribute="leading" secondItem="bir-6P-cot" secondAttribute="leading" constant="15" id="WeF-YJ-Xxd"/>
                             <constraint firstItem="PA9-cb-jtg" firstAttribute="bottom" secondItem="bir-6P-cot" secondAttribute="bottom" id="Wpa-zV-lSR"/>
-                            <constraint firstItem="6hb-k1-TJx" firstAttribute="leading" secondItem="bir-6P-cot" secondAttribute="leading" constant="10" id="f0e-e3-Age"/>
-                            <constraint firstItem="bir-6P-cot" firstAttribute="trailing" secondItem="6hb-k1-TJx" secondAttribute="trailing" constant="10" id="hGg-ZL-FGQ"/>
-                            <constraint firstAttribute="top" secondItem="RVs-y3-yPc" secondAttribute="top" constant="-5" id="iw2-hL-nkx"/>
-                            <constraint firstItem="RVs-y3-yPc" firstAttribute="leading" secondItem="bir-6P-cot" secondAttribute="leading" constant="8" id="jur-fn-pWr"/>
-                            <constraint firstItem="PA9-cb-jtg" firstAttribute="top" secondItem="6hb-k1-TJx" secondAttribute="bottom" constant="15" id="kaI-Lv-1kC"/>
+                            <constraint firstItem="iJA-OC-Aqk" firstAttribute="leading" secondItem="DoT-to-sJ3" secondAttribute="leading" id="gPe-tw-LtA"/>
+                            <constraint firstAttribute="trailing" secondItem="iJA-OC-Aqk" secondAttribute="trailing" id="ilq-Wg-oPI"/>
+                            <constraint firstItem="PA9-cb-jtg" firstAttribute="top" secondItem="iJA-OC-Aqk" secondAttribute="bottom" id="n6u-gd-zFT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="clR-Sd-6x4"/>
                     <connections>
+                        <outlet property="dateLabel" destination="qf1-if-yTv" id="u1H-Af-HZG"/>
+                        <outlet property="headerView" destination="iJA-OC-Aqk" id="XX6-yi-Fpw"/>
                         <outlet property="postImageView" destination="RVs-y3-yPc" id="A7B-gZ-K5i"/>
                         <outlet property="textView" destination="PA9-cb-jtg" id="NoS-by-IMm"/>
                         <outlet property="titleLabel" destination="6hb-k1-TJx" id="zXl-Z2-qEZ"/>
