--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -235,6 +235,81 @@
                                             <outlet property="titleLabel" destination="vsN-Ef-Juj" id="ftD-yO-XqD"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="adCell" rowHeight="375" id="TUw-j7-kb6" customClass="AdTableViewCell" customModule="The_JBB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="404.5" width="414" height="375"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TUw-j7-kb6" id="066-wM-uJ9">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="375"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nmN-Sv-YPP" customClass="GADUnifiedNativeAdView">
+                                                    <rect key="frame" x="5" y="11" width="404" height="353"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8s-4U-I9Z">
+                                                            <rect key="frame" x="10" y="10" width="64.5" height="23"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="23" id="QgO-og-Tqi"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Body" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Eq-sQ-0Jw">
+                                                            <rect key="frame" x="10" y="38" width="384" height="33"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yA6-UL-K9f" customClass="GADMediaView">
+                                                            <rect key="frame" x="10" y="78" width="384" height="225"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="225" id="U5C-Rb-8up"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ib6-pD-ecb">
+                                                            <rect key="frame" x="20" y="314" width="364" height="31"/>
+                                                            <color key="tintColor" name="Teel"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="filled" title="Call to Action">
+                                                                <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </buttonConfiguration>
+                                                        </button>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.61176470588235299" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="R8s-4U-I9Z" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="10" id="06h-oB-v4B"/>
+                                                        <constraint firstItem="yA6-UL-K9f" firstAttribute="top" secondItem="8Eq-sQ-0Jw" secondAttribute="bottom" constant="7" id="71t-LC-pie"/>
+                                                        <constraint firstItem="yA6-UL-K9f" firstAttribute="leading" secondItem="8Eq-sQ-0Jw" secondAttribute="leading" id="BFk-Ot-7YT"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Ib6-pD-ecb" secondAttribute="trailing" constant="20" id="KrG-qg-cj7"/>
+                                                        <constraint firstItem="8Eq-sQ-0Jw" firstAttribute="leading" secondItem="R8s-4U-I9Z" secondAttribute="leading" id="L61-ka-sMg"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Ib6-pD-ecb" secondAttribute="bottom" constant="8" id="SmN-JV-drz"/>
+                                                        <constraint firstAttribute="bottom" secondItem="yA6-UL-K9f" secondAttribute="bottom" constant="50" id="TXW-6X-reu"/>
+                                                        <constraint firstItem="8Eq-sQ-0Jw" firstAttribute="top" secondItem="R8s-4U-I9Z" secondAttribute="bottom" constant="5" id="c02-B4-Uyy"/>
+                                                        <constraint firstItem="R8s-4U-I9Z" firstAttribute="top" secondItem="nmN-Sv-YPP" secondAttribute="top" constant="10" id="ce6-OZ-CKn"/>
+                                                        <constraint firstItem="Ib6-pD-ecb" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="20" id="fNY-tO-kL0"/>
+                                                        <constraint firstItem="yA6-UL-K9f" firstAttribute="trailing" secondItem="8Eq-sQ-0Jw" secondAttribute="trailing" id="gU6-lT-pvK"/>
+                                                        <constraint firstItem="yA6-UL-K9f" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="10" id="iz8-0e-pBu"/>
+                                                        <constraint firstAttribute="trailing" secondItem="yA6-UL-K9f" secondAttribute="trailing" constant="10" id="kUc-9X-YNy"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nmN-Sv-YPP" firstAttribute="leading" secondItem="066-wM-uJ9" secondAttribute="leading" constant="5" id="5GA-u8-7Bk"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="nmN-Sv-YPP" secondAttribute="bottom" id="gbU-bh-B46"/>
+                                                <constraint firstItem="nmN-Sv-YPP" firstAttribute="top" secondItem="066-wM-uJ9" secondAttribute="topMargin" id="y07-ul-hnp"/>
+                                                <constraint firstAttribute="trailing" secondItem="nmN-Sv-YPP" secondAttribute="trailing" constant="5" id="zSA-Mp-wbq"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="adDetailLabel" destination="8Eq-sQ-0Jw" id="hL2-XM-tGP"/>
+                                            <outlet property="adTitleLabel" destination="R8s-4U-I9Z" id="ntJ-YJ-hq4"/>
+                                            <outlet property="callToActionButton" destination="Ib6-pD-ecb" id="hdW-Cs-SDt"/>
+                                            <outlet property="mediaView" destination="yA6-UL-K9f" id="AhT-Oo-xUV"/>
+                                            <outlet property="nativeAdView" destination="nmN-Sv-YPP" id="JUx-j8-VLI"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i7w-Gf-sA8">
