--- a/The JBB/Base.lproj/LaunchScreen.storyboard
+++ b/The JBB/Base.lproj/LaunchScreen.storyboard
@@ -16,19 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NewLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8Ad-7J-K3K">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NewLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8Il-gA-5WW">
                                 <rect key="frame" x="107" y="353" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="xEB-GN-R1T"/>
-                                    <constraint firstAttribute="width" constant="200" id="z0F-zR-ouf"/>
+                                    <constraint firstAttribute="width" constant="200" id="K47-37-xwV"/>
+                                    <constraint firstAttribute="width" secondItem="8Il-gA-5WW" secondAttribute="height" multiplier="1:1" id="ecc-CU-Ex2"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="8Ad-7J-K3K" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="k6y-BQ-upk"/>
-                            <constraint firstItem="8Ad-7J-K3K" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="pM4-ak-xTN"/>
+                            <constraint firstItem="8Il-gA-5WW" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="SP1-5m-ZIb"/>
+                            <constraint firstItem="8Il-gA-5WW" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="TlO-2r-uGi"/>
                         </constraints>
                     </view>
                 </viewController>
